--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <link rel="stylesheet" href="styles.css">
 <h1>Hello, World!</h1>
 <p>I'm Max Gerber and this is my website.</p>
 </body>
