--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
   <link rel="stylesheet" href="styles.css">
+  <title>Max Gerber :)</title>
 <h1>Hello, World!</h1>
 <p>I'm Max Gerber and this is my website.</p>
 </body>
