--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <title>Max Gerber :)</title>
   <h1>Hello, World!</h1>
   <p>I'm Max Gerber and this is my website.</p>
+  <p><a href="soundboard.html">Soundboard!</a></p>
 </body>
 </html>
