--- a/soundboard.html
+++ b/soundboard.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="soundboardStyles.css">
   <title>Max's Soundboard!</title>
   <h1>Hello, World!</h1>
-  <p>This is the soundboard page. Hopefully you're not seeing this unless you've clicked a link.</p>
+  <p><a href="index.html">This is gonna be a sound eventually!</a></p>
 </body>
 </html>
