Adjusted File Layout
Added soundboard directory and assets subdirectory. Moved soundboard.html and soundboardStyles.css to soundboard. Added "hehehee.wav" and "woahwoah.wav" to soundboard/assets directory.

--- a/soundboard/soundboard.html
+++ b/soundboard/soundboard.html
@@ -4,6 +4,6 @@
   <link rel="stylesheet" href="soundboardStyles.css">
   <title>Max's Soundboard!</title>
   <h1>Hello, World!</h1>
-  <p><a href="index.html">This is gonna be a sound eventually!</a></p>
+  <p><a href="../index.html">This is gonna be a sound eventually!</a></p>
 </body>
 </html>
