Added button style

--- a/soundboard/soundboard.html
+++ b/soundboard/soundboard.html
@@ -5,7 +5,7 @@
   <title>Max's Soundboard!</title>
   <h1>Hello, World!</h1>
   <audio id="sfx"><source src="assets/hehehee.wav"></audio>
-    <button onclick="playsound()" id="button">Hehehee</button>
+    <button class="button" onclick="playsound()" id="button">Hehehee</button>
     <script> function playsound() {
       var sfx = document.getElementById("sfx");
       sfx.autoplay='true';
