A whole bunch of stuff
ayyyyyy I'm gonna be late to class

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body>
-  <link rel="stylesheet" href="styles.css">
-  <title>Max Gerber :)</title>
-  <h1>Hello, World!</h1>
-  <p>I'm Max Gerber and this is my website.</p>
-  <p><a href="soundboard/soundboard.html">Soundboard!</a></p>
-</body>
+  <head>
+    <title>Max Gerber :)</title>
+    <link rel="icon" href="assets/maxzoomed.png">
+  </head>
+  <body>
+    <link rel="stylesheet" href="styles.css">
+    <h1><b>Hello, World!</b></h1>
+    <p>I'm Max Gerber and this is my website.</p>
+    <p><a href="soundboard/soundboard.html">Soundboard!</a></p>
+  </body>
 </html>
