--- a/soundboard/soundboard.html
+++ b/soundboard/soundboard.html
@@ -17,8 +17,8 @@
 
     <p><u>GLaDOS Voice Lines</u></p>
     
-    <audio id="hehehee"><source src="assets/hehehee.wav"></audio>
-    <audio id="woahwoah"><source src="assets/woahwoah.wav"></audio>
+    <audio id="hehehee"><source src="assets/glados/hehehee.wav"></audio>
+    <audio id="woahwoah"><source src="assets/glados/woahwoah.wav"></audio>
     
     <button class="button" onclick="playsound('hehehee')" id="button">Hehehee</button>
     <button class="button" onclick="playsound('woahwoah')" id="button">Woah Woah</button>
@@ -27,11 +27,39 @@
 
   <div class="SectionTwo">
 
-    <p><u>Game Sound Effects</u></p>
+    <p><u>Deltarune SFX</u></p>
 
-    <audio id="deltaruneexplosion"><source src="assets/deltaruneexplosion.wav"></audio>
+    <audio id="badexplosion"><source src="assets/deltarune/badexplosion.wav"></audio>
+    <audio id="dramaexplosion"><source src="assets/deltarune/dramaexplosion.wav"></audio>
+    <audio id="fightstart"><source src="assets/deltarune/fightstart.ogg"></audio>
+    <audio id="fountainmake"><source src="assets/deltarune/fountainmake.ogg"></audio>
+    <audio id="hurt"><source src="assets/deltarune/hurt.wav"></audio>
+    <audio id="item"><source src="assets/deltarune/item.wav"></audio>
+    <audio id="pchunk"><source src="assets/deltarune/pchunk.wav"></audio>
+    <audio id="phone"><source src="assets/deltarune/phone.wav"></audio>
+    <audio id="pwooo"><source src="assets/deltarune/pwooo.wav"></audio>
+    <audio id="save"><source src="assets/deltarune/save.wav"></audio>
+    <audio id="shock"><source src="assets/deltarune/shock.ogg"></audio>
+    <audio id="spamlaugh"><source src="assets/deltarune/spamlaugh.wav"></audio>
+    <audio id="step1"><source src="assets/deltarune/step1.wav"></audio>
+    <audio id="step2"><source src="assets/deltarune/step2.wav"></audio>
+    <audio id="won"><source src="assets/deltarune/won.wav"></audio>
 
-    <button class="button" onclick="playsound('deltaruneexplosion')" id="button">Boom!</button>
+    <button class="button" onclick="playsound('badexplosion')" id="button">Boom!</button>
+    <button class="button" onclick="playsound('dramaexplosion')" id="button">BOOM.</button>
+    <button class="button" onclick="playsound('fightstart')" id="button">Shink!</button>
+    <button class="button" onclick="playsound('fountainmake')" id="button">BWAAAHH</button>
+    <button class="button" onclick="playsound('pchunk')" id="button">Chunk!</button>
+    <button class="button" onclick="playsound('pwooo')" id="button">Pwooo!</button>
+    <button class="button" onclick="playsound('hurt')" id="button">Ouch</button>
+    <button class="button" onclick="playsound('item')" id="button">Item</button>
+    <button class="button" onclick="playsound('phone')" id="button">Phonecall</button>
+    <button class="button" onclick="playsound('save')" id="button">Save</button>
+    <button class="button" onclick="playsound('shock')" id="button">Shock</button>
+    <button class="button" onclick="playsound('spamlaugh')" id="button">Spam</button>
+    <button class="button" onclick="playsound('step1')" id="button">Step 1</button>
+    <button class="button" onclick="playsound('step2')" id="button">Step 2</button>
+    <button class="button" onclick="playsound('won')" id="button">You Win!</button>
 
   </div>
 
